<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/listItem"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/Poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/text"
            android:text="@string/no"
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/text"
            android:text="@string/name"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/text"
            android:text="@string/description"
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/text"
            android:text="@string/price"
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/text"
            android:text="@string/kategori"
            android:id="@+id/slug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>